--- a/page5.html
+++ b/page5.html
@@ -152,7 +152,7 @@
                     <div class="porducer-me-box box-one">
                         <div class="row">
 
-                            <div class="col-md-4 col-sm-6  col-12">
+                            <div class="col-12 col-sm-6 col-lg-4">
                                 <div class="box">
                                     <div class='img-me'>
                                         <div class="overlay"></div>
@@ -160,16 +160,22 @@
                                         <button class="addToWishList far fa-heart" data-item_id="1"><i class=""></i></button>
                                     </div>
                                     <div class="show-button">
-                                        <span class="float-right">$1000</span>
-                                        <button data-item_id="1" class="float-lift addToBasket" type="button"><i class="fas fa-cart-arrow-down"></i>الى السله </button>
-
-                                        <small class="float-right"><span>العموله</span> $300 </small>
-
+                                        <div class="row">
+                                            <div class="col-6 text-right">
+                                                <h3>$1000</h3>
+                                                <p><span>العموله</span> $300 </p>
+                                            </div>
+                                            <div class="col-6">
+                                                <button data-item_id="1" class="addToBasket" type="button">
+                                                    <i class="fas fa-cart-arrow-down"></i>الى السله 
+                                                </button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-md-4 col-sm-6  col-12">
+                            <div class="col-12 col-sm-6 col-lg-4">
                                 <div class="box">
                                     <div class='img-me'>
                                         <div class="overlay"></div>
@@ -177,16 +183,22 @@
                                         <button class="addToWishList far fa-heart" data-item_id="2"><i class=""></i></button>
                                     </div>
                                     <div class="show-button">
-                                        <span class="float-right">$2000</span>
-                                        <button data-item_id="2" class="float-lift addToBasket" type="button"><i class="fas fa-cart-arrow-down"></i>الى السله </button>
-
-                                        <small class="float-right"><span>العموله</span> $300 </small>
-
+                                        <div class="row">
+                                            <div class="col-6 text-right">
+                                                <h3>$1000</h3>
+                                                <p><span>العموله</span> $300 </p>
+                                            </div>
+                                            <div class="col-6">
+                                                <button data-item_id="1" class="addToBasket" type="button">
+                                                    <i class="fas fa-cart-arrow-down"></i>الى السله 
+                                                </button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-md-4 col-sm-6  col-12">
+                            <div class="col-12 col-sm-6 col-lg-4">
                                 <div class="box">
                                     <div class='img-me'>
                                         <div class="overlay"></div>
@@ -194,11 +206,17 @@
                                         <button class="addToWishList far fa-heart" data-item_id="3"><i class=""></i></button>
                                     </div>
                                     <div class="show-button">
-                                        <span class="float-right">$3000</span>
-                                        <button data-item_id="3" class="float-lift addToBasket" type="button"><i class="fas fa-cart-arrow-down"></i>الى السله </button>
-
-                                        <small class="float-right"><span>العموله</span> $200 </small>
-
+                                        <div class="row">
+                                            <div class="col-6 text-right">
+                                                <h3>$1000</h3>
+                                                <p><span>العموله</span> $300 </p>
+                                            </div>
+                                            <div class="col-6">
+                                                <button data-item_id="1" class="addToBasket" type="button">
+                                                    <i class="fas fa-cart-arrow-down"></i>الى السله 
+                                                </button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
