bar in the page2

--- a/page2.html
+++ b/page2.html
@@ -145,6 +145,11 @@
                     <div class="porducer-me-box box-one">
                         <div class="row">
 
+                            <div class="bar">
+                                <a href="dashboard/seller/add-dersses" class="btn-base btn1"><i class="fa fa-plus"></i> جديد </a>
+                                <a href="dashboard/seller/activeated_items" class="btn-base btn1"><i class="fa fa-check-circle"></i> المنتجات النشطه </a>
+                                <a href="dashboard/seller/dactiveated_items" class="btn-base btn1"><i class="fa fa-minus-circle"></i> المنتجات الخامله </a>
+                            </div>
 
                             <div class="basket-bar text-center ">
                                 <form action="/basket/clear" method="POST" style="display: inline-block">
