--- a/page5.html
+++ b/page5.html
@@ -162,8 +162,8 @@
                                     <div class="show-button">
                                         <div class="row">
                                             <div class="col-6 text-right">
-                                                <h3>$1000</h3>
-                                                <p><span>العموله</span> $300 </p>
+                                                <h3><span>السعر : </span> 1000$</h3>
+                                                <p><span>العموله : </span> 300$ </p>
                                             </div>
                                             <div class="col-6">
                                                 <button data-item_id="1" class="addToBasket mt-1" type="button">
