--- a/page3.html
+++ b/page3.html
@@ -171,6 +171,10 @@
                                         <div class="overlay"></div>
                                         <a href="item/1"><img src="images/items/1_1606117526A148.jpeg" alt="gomla-dresses-wideings"></a>
                                         <button class="addToWishList far fa-heart" data-item_id="10"></button>
+                                        <div class="toole-me text-center">
+                                            <button type="button" class="fas fa-trash-alt trash"></button>
+                                            <button type="button" class="fas fa-skating skating"></button>
+                                        </div>
                                     </div>
                                     <div class="show-button">
                                         <span class="float-right">$1000</span>
@@ -186,6 +190,10 @@
                                         <div class="overlay"></div>
                                         <a href="item/2"><img src="images/items/1_1606117526B1034.jpeg" alt="gomla-dresses-wideings"></a>
                                         <button class="addToWishList far fa-heart" data-item_id="11"></button>
+                                        <div class="toole-me text-center">
+                                            <button type="button" class="fas fa-trash-alt trash"></button>
+                                            <button type="button" class="fas fa-skating skating"></button>
+                                        </div>
                                     </div>
                                     <div class="show-button">
                                         <span class="float-right">$2000</span>
